--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -27,7 +27,7 @@
                 <% if (user.local.username) { %>
                     <p>
                         <strong>id</strong>: <%= user._id %><br>
-                        <strong>email</strong>: <%= user.local.email %><br>
+                        <strong>email</strong>: <%= user.local.username %><br>
                         <strong>password</strong>: <%= user.local.password %>
                     </p>
                     
