--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -86,12 +86,17 @@
                 </div>
             </div>
             
+        <div class="row">
             <!-- Token Authentication Block -->
             <div class="col-sm-6">
                 <div class="well">
                     <h3 class="text-warning"><span class="fa fa-cogs"></span> API Token</h3>
                     <p>
-                        <strong>Token</strong>: <%= user._id %><br>
+                        <% if (user.token) { %>
+                            <strong>Token</strong>: <%= user.token.value %><br>
+                        <% } else { %>
+                            <a href="/getToken" class="btn btn-warning">Get Token</a>
+                        <% } %>
                     </p>
 
                 </div>
